# gemini-long-context-rag

./: .env.example  .gitignore  README.md  geminiapi.md  geminiapi2.md  implementation-plan.md  prd.md  pyproject.toml
.github/workflows/: deploy.yml
data/dqc/: sample_dqc.json
docker/: Dockerfile  docker-compose.yml
frontend/: Dockerfile
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/audit/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: ApiKeyDropdown.tsx  ComplianceGauge.tsx  FileDropzone.tsx  FindingsTable.tsx  ProgressTracker.tsx  RiskChart.tsx  Sidebar.tsx  StatsCard.tsx
frontend/src/context/: ApiKeyContext.tsx
frontend/src/hooks/: useJobProgress.ts
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
omv-deployment/: docker-compose.yml
src/: __init__.py  config.py  logger.py
src/api/: main.py  schemas.py
src/api/routers/: v1.py
src/audit/: audit_logger.py
src/evaluation/: dqc_engine.py  output_parsers.py  prompt_templates.py
src/frontend/: app.py
src/ingestion/: docx_extractor.py  extractor_factory.py  pdf_extractor.py  pptx_extractor.py  xlsx_extractor.py
src/llm/: callbacks.py  factory.py
src/models/: chunk.py  document.py  dqc.py  report.py
src/orchestration/: orchestrator.py
src/preprocessing/: chunker.py
src/reporting/: json_reporter.py  pdf_reporter.py
src/retrieval/: retriever.py
src/vectorstore/: chroma_store.py
tests/: conftest.py  test_api.py  test_audit.py  test_chunker.py  test_config.py  test_dqc_engine.py  test_extractor_factory.py  test_llm_factory.py  test_models.py  test_retriever.py
(+1 files in other folders)
